--- a/Style.css
+++ b/Style.css
@@ -155,3 +155,7 @@ border: 2px solid #fff;
 	text-decoration: none;
  	
 }
+
+@media screen and (max-width: 1280px) { div.contentblock {width: 1200px;} }
+@media screen and (max-width: 1140px) { div.contentblock {width: 1024px;} }
+@media screen and (max-width: 992px) { div. contentblock {width: 970px;} }
